css/index.css
html,
body {
  margin: 0;
  height: 100%;
  width: 100%;
  background-color: #e0e1dd;
  font-family: "Montserrat", sans-serif;
}

p,
li {
  font-size: 18px;
  line-height: 1.5;
}

.mainButton {
  background-size: 220%;
  box-shadow: 0 0.2em 0.3em rgba(0, 0, 0, 0.15);
  color: #da2c38;
  background-color: transparent;
  background-position: 100%;
  border: 3px solid #da2c38;
  text-transform: uppercase;
  padding: 8px 16px;
  border-radius: 3px;
  transition: all 0.2s ease-out;
  font-weight: 900;
  cursor: pointer;
  letter-spacing: 2px;
  background-image: linear-gradient(
    110deg,
    #da2c38 0%,
    #da2c38 50%,
    transparent 50%,
    transparent 100%
  );
  font-size: 14px;
  margin: 5px;
  text-decoration: none;
}

.mainButton:hover {
  transform: translateY(-2px);
  box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.25);
  background-position: 0;
  color: #e0e1dd;
}

.mainButton:active {
  transform: translateY(-1px);
}

/* Resuable Classes */
.container {
  max-width: 1024px;
  margin: 0 auto;
  padding-top: 24px;
  padding-bottom: 24px;
}

.heading {
  font-size: 50px;
  padding-bottom: 32px;
  text-align: center;
  padding-top: 24px;
  padding-bottom: 0px;
  max-width: 100%;
}

/* End Reusable Classes */

/* Nav/Intro */

.intro {
  display: flex;
  background-image: linear-gradient(to bottom, #000, transparent),
    url(../images/heroImg.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100%;
}

.intro .links {
  text-align: center;
}

.intro a {
  color: #e0e1dd;
  text-decoration: none;
  padding: 8px;
}

/* align-items: center;
  text-align: center; */

.heroH2 {
  font-size: 40px;
  color: #e0e1dd;
  text-shadow: 2px 2px 8px #000;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding-top: 40%;
  padding-right: 5px;
  padding-left: 5px;
  max-width: 100%;
}

/* End Nav/Intro */

/* image carousel */
.imgCarousel {
  background: #e0e1dd;
}
.imgCarousel .img-container {
  max-width: 100%;
  object-fit: contain;
}

.imgCarousel .img-container img {
  max-width: 100%;
  height: 250px;
}

/* End Image carousel */

/* About Me */

.aboutMeContainer {
  background: #2d628b;
  color: #e0e1dd;
}

.aboutMeContainer p {
  padding-left: 16px;
  padding-right: 16px;
}

.about-content {
  display: flex;
  flex-direction: column;
}

.aboutMeContainer img {
  max-width: 100%;
  aspect-ratio: 4/3;
  margin-bottom: 24px;
}

/* For Desktop*/

@media screen and (min-width: 768px) {
  nav {
    max-width: 100%;
  }
  .intro .links {
    text-align: end;
    max-width: 100%;
  }
  .about-content {
    flex-direction: row;
  }
  .about-text-container {
    padding-right: 24px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  .aboutMeContainer img {
    padding-left: 24px;
    margin-top: 0;
  }
}

/* End About Me */

/* Skills */
.skills {
  background-color: #da2c38;
  color: #000;
}

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  grid-gap: 1rem;
}
.grid > div {
  /* background:  */
  padding: 1rem;
  display: grid;
  align-items: center;
  /* justify-self: center; */
  text-align: center;
}

.grid > div::before {
  content: "";
  padding-bottom: 100%;
  display: block;
}
.grid > div::before,
.grid > div > img {
  grid-area: 1 / 1 / 2 / 2;
}
.grid > div > img {
  width: 70%;
  object-fit: contain;
}

/* End Skills */

/* projects */
.projects {
  background-color: #e0e1dd;
}

.projectTitle {
  font-size: 24px;
  text-align: center;
}

#dcg {
  display: flex;
  flex-direction: column;
}

#folio {
  display: flex;
  flex-direction: column;
}

.btnDiv {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 32px;
  padding-top: 24px;
}

.exampleImg {
  display: flex;
  justify-content: center;
  padding-top: 24px;
  padding-bottom: 8px;
}

.exampleImg img {
  box-shadow: 2px 2px 16px #000;
  max-width: 100%;
}

#folio .exampleImg {
  padding-bottom: 48px;
}

/* End projects */

/* experience */
.experience {
  background-color: #2d628b;
}
/* End experience */

/* footer */
.footer {
  display: flex;
  flex-direction: column;
  background-color: #000000;
  height: 25%;
}

.footer h2 {
  color: #e0e1dd;
  align-items: center;
  justify-content: center;
  font-size: 32px;
}

.footer .links {
  text-align: center;
}

.footer a {
  color: #e0e1dd;
  text-decoration: none;
  padding: 8px;
}
/* End footer */

